# smart-dict

./: Cargo.toml  readme.md
src/: analyse.rs  fileman.rs  lib.rs  main.rs  rev_dict.rs  trie.rs  types.rs
src/analyse/: shortest.rs
