[package]
name = "smart-dict"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
regex = "1.7.0"
lazy_static = "1.4.0"
home = "0.5.3"

[dependencies.async-std]
version = "1.6"
features = ["attributes"]
